--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@
   	transition-duration: 0.4s;
 }
 
+
+
 .video-container {
   position: absolute;
   top: 0;
@@ -91,4 +93,31 @@
 
 .characters {
 	margin-top: 50px;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.weapons img {
+	height: 50px;
+	width: 50px;
 }
